--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,47 @@
-.idea/
+HELP.md
+target/
+!service/.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+### Node ###
+node_modules/
+jspm_packages/
+.npm
+.next
+out
+.vscode-test
+logs
+*.log
+npm-debug.log*
+
+### Resources ###
+service/src/main/resources/drivers/
