--- a/service/pom.xml
+++ b/service/pom.xml
@@ -52,6 +52,13 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.22.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
+			<scope>test</scope>
+		</dependency>
+
 
 
 	</dependencies>
