--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name = pokeshop
 api.baseUrl = "https://pokeapi.co/api/v2/"
-
+spring.datasource.jdbcUrl=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
