--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.http.converters.preferred-json-mapper=gson
+spring.mvc.converters.preferred-json-mapper=gson
+
+
